123/MyProject/src/objects/kumar__c.object
<CustomObject>
    <fields>
        <fullName>Bill__c</fullName>
        <label>Bill</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Pament__c</fullName>
        <label>Credit Card Pament</label>
        <picklist>
            <picklistValues>
                <fullName>online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>offline</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <label>Developer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR__c</fullName>
        <label>HR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Person</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>kumars</relationshipLabel>
        <relationshipName>kumars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InActive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>payment__c</fullName>
        <label>Bill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>kumar</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>kumars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>